--- a/css/vars.less
+++ b/css/vars.less
@@ -1,8 +1,6 @@
 //main: main.less
 
-@font1: 'Open Sans', sans-serif;
-@font2: 'Oswald', sans-serif;
+@black: #4d4959;
+@gold: #C8A35F;
 
-@black: #252525;
-@gray: #777777;
-@green: #4CAF50;
+@gray: #848789;
